agnostics/argocd/base/cnp-argocd-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-argocd-egress
  namespace: argocd
spec:
  endpointSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - argocd-repo-server
      - argocd-dex-server
      - argocd-notifications-controller
  egress:
  - toEntities:
    - cluster
    - host
  - toCIDR:
    - 0.0.0.0/0
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
